Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-133341

flaky test Tst_touchMouse::touchCancelWillCancelMousePress

XMLWordPrintable

    • Linux/X11
    • 9e9ed403d (dev), 0b4c76d60 (6.9), 372e02da3 (6.8), 7504ae9b9 (tqtc/lts-6.5)

      Tst_touchMouse::touchCancelWillCancelMousePress  is flaky due to events being sent to an un-updated showview.Position and showView.framePosition.

      Link to Grafana: https://testresults.qt.io/grafana/d/d8bebf9c-6e1c-4bff-a214-8d506943f23c/new-flaky-crashed-failed-tests?var-group_by_interval=1d&orgId=1&from=now-7d&to=now&timezone=browser&var-branch=1&var-test_case_n=793&var-test_function_n=7913

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            fredericl Frederic Lefebvre
            fredericl Frederic Lefebvre
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes