src/quicktestutils/quick/viewtestutils.cpp
@@ -490,6 +490,7 @@ namespace QQuickTest {
             qCritical() << errorMessage;
             return false;
         }
+        const QPoint framePos(view.framePosition());
         view.show();
         if (!QTest::qWaitForWindowExposed(&view)) {
             qCritical() << "qWaitForWindowExposed() failed";
@@ -500,6 +501,13 @@ namespace QQuickTest {
             const auto errors = view.errors();
             for (const auto &error : errors)
                 qCritical() << qPrintable(error.toString());
+            return false;
+        }
+        if (view.flags().testFlag(Qt::FramelessWindowHint))
+            return true;
+        const bool positionOk = QTest::qWaitFor([&]{ return framePos != view.position(); });
+        if (!positionOk) {
+            qCritical() << "Position failed to update";
             return false;
         }
         return true;
